tree-sitter-baseline/grammar.js
    source_file: $ => repeat($._top_level),

    _top_level: $ => choice(
      $.module_decl,
      $.prelude_decl, // @prelude(script)
      $.import_decl,
      $._definition,
      $.spec_block,
      $.inline_test,
      $.describe_block,
      $.test_section
    ),

    // --- Declarations ---

    // Spec 7.1: @module Name, allows optional @ to match examples
    function_def: $ => seq(
      optional('export'),
      'fn', field('name', $._name),
      optional($.type_params),
      '(', optional(field('params', $.param_list)), ')',
      optional(seq('->', optional(field('effects', $.effect_set)), field('return_type', $._type_expr))),
      '=', field('body', $._expression)
    ),

    param_list: $ => commaSep1($.param),
    param: $ => seq(field('pattern', $._pattern), ':', field('type', $._type_expr)),

    effect_def: $ => seq(
      optional('export'),
      'effect', $.type_identifier, '{', repeat($.function_signature), '}'
    ),

    _type_expr: $ => choice(
      $.type_identifier,
      $.generic_type,
      $.option_type,
      $.tuple_type,
      $.record_type,
      $.function_type
    ),

    type_signature: $ => seq(
      $._type_expr, '->',
      optional($.effect_set),
      $._type_expr
    ),

    generic_type: $ => seq($.type_identifier, '<', commaSep1($._type_expr), '>'),
    tuple_type: $ => seq('(', commaSep($._type_expr), ')'),
    _field_name: $ => choice($.identifier, $.string_literal),
    effect_set: $ => seq('{', commaSep1($.type_identifier), '}'),
    function_signature: $ => seq($._name, ':', $.type_signature),
    type_annotation: $ => seq(':', $._type_expr),

    // --- Expressions ---

    _expression: $ => choice(
      $.pipe_expression,
      $.match_expression,
      $.if_expression,
      $.for_expression,
      $.with_expression,
      $.handle_expression,
      $.restrict_expression,
      $.binary_expression,
      $.unary_expression,
      $.try_expression,
      $.call_expression,
      $.field_expression,
      $.range_expression,
      $.literal,
      $._name, // includes identifier and effect_identifier
      $.type_identifier, // for nullary constructors: Active, None
      $.list_expression,
      $.struct_expression, // User { id: 1 }
      $.tuple_expression,
      $.record_update,    // { ..record, field: newValue }
      $.record_expression,
      $.block,
      $.lambda,
      $.parenthesized_expression,
      $.hole_expression,
      $.expect_expression,
      $.map_literal,
      $.set_literal
    ),

    // [1, 2, 3]
    list_expression: $ => seq('[', commaSep($._expression), ']'),

    // #{ key: value, ... }
    pipe_expression: $ => prec.left(PREC.PIPE, seq($._expression, '|>', $._expression)),

    // match x ...
    match_expression: $ => prec.right(seq('match', $._expression, repeat1($.match_arm))),
    match_arm: $ => seq($._pattern, repeat(seq('|', $._pattern)), optional($.match_guard), '->', $._expression),
    if_expression: $ => prec.right(seq(
      'if', $._expression, 'then', $._expression,
      optional(seq('else', $._expression))
    )),

    // for x in iter do ...
    for_expression: $ => seq('for', $._pattern, 'in', $._expression, 'do', $._expression),

    // with Console.println! { body } — capture effect calls for testing
    // with { Console: handler } body — effect handler map
    field_expression: $ => prec.left(PREC.MEMBER, seq(
      $._expression,
      '.',
      choice($.identifier, $.effect_identifier)
    )),

    // f(x, y) or f(name: "Alice", age: 30)
    // $._call_lparen is an external token that matches '(' only when NO newline
    // appears between it and the preceding token. This prevents newline-separated
    // expressions from being parsed as call arguments: `42\n(a, b)` is NOT a call.
    call_expression: $ => prec.left(PREC.CALL, seq(
      $._expression, $._call_lparen, optional(commaSep(choice($.named_argument, $._expression))), ')'
    )),

    range_expression: $ => prec.left(PREC.RANGE, seq($._expression, '..', $._expression)),

    // Arithmetic & Logic
    binary_expression: $ => choice(
      prec.left(PREC.ADDITIVE, seq($._expression, choice('+', '-', '++'), $._expression)),
      prec.left(PREC.MULTIPLICATIVE, seq($._expression, choice('*', '/', '%'), $._expression)),
      prec.left(PREC.COMPARE, seq($._expression, choice('==', '!=', '<', '>', '<=', '>='), $._expression)),
      prec.left(PREC.LOGICAL_AND, seq($._expression, '&&', $._expression)),
      prec.left(PREC.LOGICAL_OR, seq($._expression, '||', $._expression))
    ),

    unary_expression: $ => prec(PREC.UNARY, seq(choice('not', '-'), $._expression)),

    // expr? — unwrap Option/Result or propagate error
    tuple_expression: $ => seq('(', commaSep($._expression), ')'),

    // User { id: 1 }
    struct_expression: $ => seq($.type_identifier, '{', commaSep($.record_field_init), '}'),

    // { id: 1 } (Anonymous)
    record_expression: $ => seq('{', commaSep($.record_field_init), '}'),
    record_field_init: $ => seq($._field_name, ':', $._expression),

    // { ..record, field: newValue }
    block: $ => seq('{', repeat1(seq($._statement, optional(';'))), '}'),
    _statement: $ => choice(
      $.let_binding,
      $.assignment_statement,
      $._expression
    ),
    let_binding: $ => seq('let', optional(field('mutable', $.mut_keyword)), $._pattern, optional(field('type', $.type_annotation)), '=', $._expression),
    _pattern: $ => choice(
      $.identifier,
      $.type_identifier, // Matches nullary constructors: None, Active
      $.constructor_pattern, // Matches constructors with payload: Some(v)
      $.literal,
      $.tuple_pattern,
      $.wildcard_pattern,
      $.record_pattern,
      $.list_pattern
    ),
    constructor_pattern: $ => seq($.type_identifier, '(', commaSep($._pattern), ')'),
    tuple_pattern: $ => seq('(', commaSep($._pattern), ')'),
    wildcard_pattern: $ => '_',
    test_section: $ => prec.right(seq('@test', repeat1(choice($.inline_test, $.describe_block)))),
    inline_test: $ => seq('test', $.string_literal, '=', $._expression),

    // --- BDD Testing ---

    literal: $ => choice($.float_literal, $.integer_literal, $.multiline_string_literal, $.string_literal, $.raw_string_literal, $.raw_hash_string_literal, $.boolean_literal),
    float_literal: $ => token(seq(/\d+/, '.', /\d+/, optional(seq(/[eE]/, optional(/[+-]/), /\d+/)))),
    integer_literal: $ => token(choice(
      /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,   // hex: 0xFF, 0x1A_2B
      /0[bB][01][01_]*/,                   // binary: 0b1010, 0b1111_0000
      /0[oO][0-7][0-7_]*/,                 // octal: 0o755, 0o77_77
      /[0-9][0-9_]*/,                      // decimal: 42, 1_000_000
    )),
    boolean_literal: $ => choice('true', 'false'),

    // Recursive Interpolation: "Hello ${name}"
    string_literal: $ => seq(
      $.string_start,
      repeat(choice(
        $.string_content,
        $.escape_sequence,
        $.interpolation
      )),
      $.string_end
    ),
    // Triple-quoted multi-line strings: """..."""
    identifier: $ => /[a-z_][a-z0-9_]*/,
    effect_identifier: $ => token(seq(/[a-z_][a-z0-9_]*/, '!')),
    _name: $ => choice($.identifier, $.effect_identifier),
    type_identifier: $ => /[A-Z][a-zA-Z0-9]*/,

    // --- Comments ---
