tree-sitter-baseline/test/corpus/bdd_testing.txt
================================================================================
Top-level inline test
================================================================================

test "basic addition" = 1 + 1 == 2

--------------------------------------------------------------------------------

(source_file
  (inline_test
    (string_literal
      (string_start)
      (string_content)
      (string_end))
    (binary_expression
      (binary_expression
        (literal
          (integer_literal))
        (literal
          (integer_literal)))
      (literal
        (integer_literal)))))

================================================================================
Multiple top-level inline tests
================================================================================

test "integers" = 42 == 42
test "floats" = 3.14 == 3.14
test "booleans" = true == true

--------------------------------------------------------------------------------

(source_file
  (inline_test
    (string_literal
      (string_start)
      (string_content)
      (string_end))
    (binary_expression
      (literal
        (integer_literal))
      (literal
        (integer_literal))))
  (inline_test
    (string_literal
      (string_start)
      (string_content)
      (string_end))
    (binary_expression
      (literal
        (float_literal))
      (literal
        (float_literal))))
  (inline_test
    (string_literal
      (string_start)
      (string_content)
      (string_end))
    (binary_expression
      (literal
        (boolean_literal))
      (literal
        (boolean_literal)))))

================================================================================
Inline test with string comparison
================================================================================

test "strings" = "hello" == "hello"

--------------------------------------------------------------------------------

(source_file
  (inline_test
    (string_literal
      (string_start)
      (string_content)
      (string_end))
    (binary_expression
      (literal
        (string_literal
          (string_start)
          (string_content)
          (string_end)))
      (literal
        (string_literal
          (string_start)
          (string_content)
          (string_end))))))

================================================================================
Inline test with function call
================================================================================

test "add works" = add(1, 2) == 3

--------------------------------------------------------------------------------

(source_file
  (inline_test
    (string_literal
      (string_start)
      (string_content)
      (string_end))
    (binary_expression
      (call_expression
        (identifier)
        (literal
          (integer_literal))
        (literal
          (integer_literal)))
      (literal
        (integer_literal)))))

================================================================================
@test section with inline tests
================================================================================

fn add(a: Int) -> Int = a + 1

@test
test "basic" = add(1) == 2
test "zero" = add(0) == 1

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (binary_expression
      (identifier)
      (literal
        (integer_literal))))
  (test_section
    (inline_test
      (string_literal
        (string_start)
        (string_content)
        (string_end))
      (binary_expression
        (call_expression
          (identifier)
          (literal
            (integer_literal)))
        (literal
          (integer_literal))))
    (inline_test
      (string_literal
        (string_start)
        (string_content)
        (string_end))
      (binary_expression
        (call_expression
          (identifier)
          (literal
            (integer_literal)))
        (literal
          (integer_literal))))))
