tree-sitter-baseline/test/corpus/effects.txt
================================================================================
Effect definition
================================================================================

effect Console {
  print! : String -> String
  read_line! : String -> String
}

--------------------------------------------------------------------------------

(source_file
  (effect_def
    (type_identifier)
    (function_signature
      (effect_identifier)
      (type_signature
        (type_identifier)
        (type_identifier)))
    (function_signature
      (effect_identifier)
      (type_signature
        (type_identifier)
        (type_identifier)))))

================================================================================
Effect with multiple operations
================================================================================

effect Random {
  int! : Int -> Int
  float! : Int -> Int
}

--------------------------------------------------------------------------------

(source_file
  (effect_def
    (type_identifier)
    (function_signature
      (effect_identifier)
      (type_signature
        (type_identifier)
        (type_identifier)))
    (function_signature
      (effect_identifier)
      (type_signature
        (type_identifier)
        (type_identifier)))))

================================================================================
Effect with tuple type in signature
================================================================================

effect Console {
  print! : String -> (String, String)
  read_line! : () -> String
}

--------------------------------------------------------------------------------

(source_file
  (effect_def
    (type_identifier)
    (function_signature
      (effect_identifier)
      (type_signature
        (type_identifier)
        (tuple_type
          (type_identifier)
          (type_identifier))))
    (function_signature
      (effect_identifier)
      (type_signature
        (tuple_type)
        (type_identifier)))))

================================================================================
Effect with generic type in signature
================================================================================

effect Storage {
  get! : String -> List<String>
}

--------------------------------------------------------------------------------

(source_file
  (effect_def
    (type_identifier)
    (function_signature
      (effect_identifier)
      (type_signature
        (type_identifier)
        (generic_type
          (type_identifier)
          (type_identifier))))))

================================================================================
Effectful function with effect set
================================================================================

fn fetch!(url: String) -> {Http} String = Http.get!(url)

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (effect_identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    effects: (effect_set
      (type_identifier))
    return_type: (type_identifier)
    body: (call_expression
      (field_expression
        (type_identifier)
        (effect_identifier))
      (identifier))))

================================================================================
Multi-effect function with block
================================================================================

fn log!(msg: String) -> {Log, Console} String = {
  Log.info!(msg);
  Console.print!(msg)
}

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (effect_identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    effects: (effect_set
      (type_identifier)
      (type_identifier))
    return_type: (type_identifier)
    body: (block
      (call_expression
        (field_expression
          (type_identifier)
          (effect_identifier))
        (identifier))
      (call_expression
        (field_expression
          (type_identifier)
          (effect_identifier))
        (identifier)))))

================================================================================
Export effect
================================================================================

export effect MyEffect {
  do_thing! : Int -> String
}

--------------------------------------------------------------------------------

(source_file
  (effect_def
    (type_identifier)
    (function_signature
      (effect_identifier)
      (type_signature
        (type_identifier)
        (type_identifier)))))

================================================================================
Calling effectful operations
================================================================================

fn main!(s: String) -> {Console} String = Console.print!(s)

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (effect_identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    effects: (effect_set
      (type_identifier))
    return_type: (type_identifier)
    body: (call_expression
      (field_expression
        (type_identifier)
        (effect_identifier))
      (identifier))))
