tree-sitter-baseline/test/corpus/expressions.txt
================================================================================
Binary expression - addition
================================================================================

fn bin_add(a: Int) -> Int = a + 1

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (binary_expression
      (identifier)
      (literal
        (integer_literal)))))

================================================================================
Binary expression - comparison
================================================================================

fn eq(a: Int) -> Boolean = a == 1

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (binary_expression
      (identifier)
      (literal
        (integer_literal)))))

================================================================================
Binary expression - logical and
================================================================================

fn both(n: Int) -> Int = n && m

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (binary_expression
      (identifier)
      (identifier))))

================================================================================
Binary expression - logical or
================================================================================

fn either(n: Int) -> Int = n || m

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (binary_expression
      (identifier)
      (identifier))))

================================================================================
Unary expression - negation
================================================================================

fn neg(x: Int) -> Int = -x

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (unary_expression
      (identifier))))

================================================================================
Unary expression - logical not
================================================================================

fn inv(n: Int) -> Int = not n

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (unary_expression
      (identifier))))

================================================================================
Pipe expression
================================================================================

fn piped(x: Int) -> Int = x |> f |> g

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (pipe_expression
      (pipe_expression
        (identifier)
        (identifier))
      (identifier))))

================================================================================
Field access
================================================================================

fn get_name(user: String) -> String = user.name

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (field_expression
      (identifier)
      (identifier))))

================================================================================
Nested field access
================================================================================

fn deep(n: Int) -> Int = response.body.data

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (field_expression
      (field_expression
        (identifier)
        (identifier))
      (identifier))))

================================================================================
Call expression
================================================================================

fn app(x: Int) -> Int = f(x)

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (call_expression
      (identifier)
      (identifier))))

================================================================================
Call expression with multiple arguments
================================================================================

fn app(n: Int) -> Int = add(1, 2)

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (call_expression
      (identifier)
      (literal
        (integer_literal))
      (literal
        (integer_literal)))))

================================================================================
If expression
================================================================================

fn choose(a: Int) -> Int = if a > 0 then a else 0

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (if_expression
      (binary_expression
        (identifier)
        (literal
          (integer_literal)))
      (identifier)
      (literal
        (integer_literal)))))

================================================================================
Chained if expression
================================================================================

fn chained(a: Int) -> Int = if a > 0 then 1 else if a < 0 then 2 else 0

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (if_expression
      (binary_expression
        (identifier)
        (literal
          (integer_literal)))
      (literal
        (integer_literal))
      (if_expression
        (binary_expression
          (identifier)
          (literal
            (integer_literal)))
        (literal
          (integer_literal))
        (literal
          (integer_literal))))))

================================================================================
Match expression with constructor patterns
================================================================================

fn unwrap(x: Int) -> Int = match x
  Some(v) -> v
  None -> 0

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (match_expression
      (identifier)
      (match_arm
        (constructor_pattern
          (type_identifier)
          (identifier))
        (identifier))
      (match_arm
        (type_identifier)
        (literal
          (integer_literal))))))

================================================================================
Match expression with literal patterns
================================================================================

fn describe(n: Int) -> String = match n
  1 -> "one"
  2 -> "two"
  _ -> "other"

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (match_expression
      (identifier)
      (match_arm
        (literal
          (integer_literal))
        (literal
          (string_literal
            (string_start)
            (string_content)
            (string_end))))
      (match_arm
        (literal
          (integer_literal))
        (literal
          (string_literal
            (string_start)
            (string_content)
            (string_end))))
      (match_arm
        (wildcard_pattern)
        (literal
          (string_literal
            (string_start)
            (string_content)
            (string_end)))))))

================================================================================
Match expression with tuple pattern
================================================================================

fn sum_pair(n: Int) -> Int = match n
  (a, b) -> a + b
  _ -> 0

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (match_expression
      (identifier)
      (match_arm
        (tuple_pattern
          (identifier)
          (identifier))
        (binary_expression
          (identifier)
          (identifier)))
      (match_arm
        (wildcard_pattern)
        (literal
          (integer_literal))))))

================================================================================
List expression
================================================================================

fn nums(n: Int) -> List<Int> = [1, 2, 3]

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (generic_type
      (type_identifier)
      (type_identifier))
    body: (list_expression
      (literal
        (integer_literal))
      (literal
        (integer_literal))
      (literal
        (integer_literal)))))

================================================================================
Empty list expression
================================================================================

fn empty(n: Int) -> Int = []

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (list_expression)))

================================================================================
Record expression
================================================================================

fn rec(n: Int) -> Int = { name: "Alice", age: 30 }

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (record_expression
      (record_field_init
        (identifier)
        (literal
          (string_literal
            (string_start)
            (string_content)
            (string_end))))
      (record_field_init
        (identifier)
        (literal
          (integer_literal))))))

================================================================================
Struct expression
================================================================================

fn make_user(n: String) -> String = User { name: n }

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (struct_expression
      (type_identifier)
      (record_field_init
        (identifier)
        (identifier)))))

================================================================================
Tuple expression
================================================================================

fn mk(n: Int) -> Int = (1, 2, 3)

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (tuple_expression
      (literal
        (integer_literal))
      (literal
        (integer_literal))
      (literal
        (integer_literal)))))

================================================================================
Block expression
================================================================================

fn compute(n: Int) -> Int = {
  let x = 10;
  let y = 20;
  x + y
}

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (block
      (let_binding
        (identifier)
        (literal
          (integer_literal)))
      (let_binding
        (identifier)
        (literal
          (integer_literal)))
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Let binding with type annotation
================================================================================

fn typed(n: Int) -> Int = {
  let x : Int = 10;
  x
}

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (block
      (let_binding
        (identifier)
        type: (type_annotation
          (type_identifier))
        (literal
          (integer_literal)))
      (identifier))))

================================================================================
Range expression
================================================================================

fn rng(n: Int) -> Int = 1..10

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (range_expression
      (literal
        (integer_literal))
      (literal
        (integer_literal)))))

================================================================================
For expression
================================================================================

fn each(n: Int) -> Int = for x in [1, 2, 3] do x + 1

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (for_expression
      (identifier)
      (list_expression
        (literal
          (integer_literal))
        (literal
          (integer_literal))
        (literal
          (integer_literal)))
      (binary_expression
        (identifier)
        (literal
          (integer_literal))))))

================================================================================
Unit expression
================================================================================

fn unit(x: Int) -> Int = ()

--------------------------------------------------------------------------------

(source_file
  (function_def
    name: (identifier)
    params: (param_list
      (param
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (tuple_expression)))
